<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.example</groupId>
    <artifactId>template_framework</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>legacy-maven</name>
            <url>https://artifactory.xyz.com/artifactory/legacy-maven-virtual</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>snapshots</id>
            <name>mvn-internal</name>
            <url>https://artifactory.xyz.com/artifactory/legacy-maven/mvn-internal</url>
        </repository>
        <repository>
            <id>maven_central</id>
            <name>Maven Central</name>
            <url>https://repo.maven.apache.org/maven2/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>central</id>
            <name>legacy-maven-virtual</name>
            <url>https://artifactory.asurion.com/artifactory/legacy-maven-virtual</url>
        </pluginRepository>
        <pluginRepository>
            <id>central</id>
            <name>maven-internal</name>
            <url>https://artifactory.asurion.com/artifactory/legacy-maven-virtual</url>
        </pluginRepository>
    </pluginRepositories>
    <properties>
        <java.version>11</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.reporting.source>UTF-8</project.reporting.source>
        <cucumber.options.default>${cucumber.tags}</cucumber.options.default>
        <cucumber.tags>--tags</cucumber.tags>
        <cucumber.version>1.2.4</cucumber.version>
        <maven.compile.encoding>UTF-8</maven.compile.encoding>
        <cucumber.jvm.parallel.version>1.2.1</cucumber.jvm.parallel.version>
        <sonar.language>java</sonar.language>
        <sonar.sources>src/main/java/com/asurion/qa/</sonar.sources>
        <sonar.java.binaries>target/classes</sonar.java.binaries>
        <sonar.test/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>29.0-jre</version>
        </dependency>


        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.10.0</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>3.141.0</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1</version>
        </dependency>

        <dependency>
            <groupId>org.jasypt</groupId>
            <artifactId>jasypt</artifactId>
            <version>1.9.2</version>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.0</version>
        </dependency>


        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-path</artifactId>
            <version>5.1.0</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>3.0.0</version>
        </dependency>


        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20230227</version>
        </dependency>

        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.8.0</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>com.asurion.tas</groupId>-->
        <!--            <artifactId>task-core</artifactId>-->
        <!--            <version>2.1.1</version>-->
        <!--        </dependency>-->


        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.10</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
        </dependency>

        <dependency>
            <groupId>com.trivago.rta</groupId>
            <artifactId>cluecumber-report-plugin</artifactId>
            <version>2.8.0</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>CucumberTests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>3.9.1.2184</version>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>properties-maven-plugin</artifactId>
                        <version>1.1.0</version>
                        <executions>
                            <!---Associate the read-project-properties goal with the initialize phase, to read the properties file-->
                            <execution>
                                <!-- Apart from this test, the phase must be initialised -->
                                <phase>validate</phase>
                                <goals>
                                    <goal>read-project-properties</goal>
                                </goals>
                                <configuration>
                                    <files>
                                        <file>${project.basedir}/src/main/resources/application.properties</file>
                                    </files>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build.helper.maven.plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <id>add-source</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>add-test-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>code</source>
                                    </sources>
                                </configuration>
                            </execution>
                            <execution>
                                <id>add-resources</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>add-test-resources</goal>
                                </goals>
                                <configuration>
                                    <resources>
                                        <resource>
                                            <directory>resources</directory>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.1.1</version>
                        <executions>
                            <execution>
                                <phase>test</phase>
                                <goals>
                                    <goal>java</goal>
                                </goals>
                                <configuration>
                                    <mainClass>com.asurion.core.testexecutor.CucumberCliRunner</mainClass>
                                    <arguments>
                                        <argument>${tags}</argument>
                                        <argument>${retryCount}</argument>
                                        <argument>${threadCount}</argument>
                                        <argument>${test.run.browser}</argument>
                                        <argument>${test.run.browser.version}</argument>
                                        <argument>${xraySync}</argument>
                                        <argument>${xrayapi}</argument>
                                        <argument>${jiraurl}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>com.trivago.rta</groupId>
                        <artifactId>cluecumber-report-plugin</artifactId>
                        <version>2.8.0</version>
                        <executions>
                            <execution>
                                <id>report</id>
                                <phase>post-integration-test</phase>
                                <goals>
                                    <goal>reporting</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <sourceJsonReportDirectory>${project.build.directory}/cucumber_json
                            </sourceJsonReportDirectory>
                            <generatedHtmlReportDirectory>${project.build.directory}/cluecumber_report
                            </generatedHtmlReportDirectory>
                        </configuration>
                    </plugin>
                </plugins>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.eclipse.m2e</groupId>
                            <artifactId>lifecycle-mapping</artifactId>
                            <version>1.0.0</version>
                            <configuration>
                                <lifecycleMappingMetadata>
                                    <pluginsExecutions>
                                        <pluginsExecution>
                                            <pluginsExecutionFilter>
                                                <groupId>
                                                    org.codehaus.mojo
                                                </groupId>
                                                <artifactId>
                                                    build-helper-maven-plugin
                                                </artifactId>
                                                <versionRange>
                                                    [1.8,)
                                                </versionRange>
                                                <goals>
                                                    <goal>
                                                        add-test-resource
                                                    </goal>
                                                </goals>
                                            </pluginsExecutionFilter>
                                            <action>
                                                <ignore/>
                                            </action>
                                        </pluginsExecution>
                                    </pluginsExecutions>
                                </lifecycleMappingMetadata>
                            </configuration>

                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
        <profile>
            <id>JunitTests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.21.0</version>
                        <executions>
                            <execution>
                                <id>gtcoe-template</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
                                    <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
                                    <parallel>methods</parallel>
                                    <argLine>-Xmx102m -XX:MaxPermSize=256m</argLine>
                                    <forkCount>5</forkCount>
                                    <reuseForks>false</reuseForks>
                                    <includes>
                                        <include>**/*Test.java</include>
                                    </includes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>